[tool.poetry]
name = "daily-screenshot"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Josh Kremer <joshkremer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
google-api-python-client = "^2.97.0"
google-auth = "^2.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
